--- a/.gitignore
+++ b/.gitignore
@@ -1,34 +1,37 @@
-# Created by https://www.toptal.com/developers/gitignore/api/java
-# Edit at https://www.toptal.com/developers/gitignore?templates=java
+# Scala specific
+target/
+lib_managed/
+.project
+.classpath
+.cache/
+.history/
+.DS_Store
 
-### Java ###
-# Compiled class file
-*.class
+# IntelliJ IDEA
+.idea/
+*.iml
+*.iws
 
-# Log file
-*.log
+# Eclipse
+.metadata/
+.classpath
+.project
+.settings/
+bin/
 
-# BlueJ files
-*.ctxt
+# SBT specific
+.sbt/
+project/target/
 
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
-
-# Package Files #
-*.jar
-*.war
-*.nar
-*.ear
+# Others
+.metals/
+.bloop/
+.bsp/
+Dump/
+metals.sbt
 *.zip
-*.tar.gz
-*.rar
 
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
-replay_pid*
-
-# End of https://www.toptal.com/developers/gitignore/api/java# pixi environments
-.pixi
-*.egg-info
-# magic environments
-.magic
+#mill
+out/
+mill
+.mill-version
